[metadata]
name = baseapp_reports
version = 0.0.3
description = BaseApp Reports
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    baseapp-core >= 0.2.3

[options.package_data]
baseapp_reports =
    *.j2
    *.html
    *.png
