[metadata]
name = baseapp_social_auth
version = 0.2.1
description = Authentication for facebook, linkedin and twitter
long_description = file: README.md
url = https://bitbucket.org/silverlogic/baseapp-social-auth-django
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    celery >= 5.2.7
    Django >= 3.2
    djangorestframework >= 3.12.4
    django-avatar >= 5.0.0
    django-model-utils >= 4.3.1
    hashids >= 1.2.0
    requests >= 2.28.1
    rest-social-auth >= 5.0.1

[flake8]
exclude =
    build
    venv
ignore =
    E501
    W503

[tool.black]
line-length = 100
target_version = ['py38']

[tool.isort]
line_length=100
multi_line_output=3
force_grid_wrap=0
combine_as_imports=true
include_trailing_comma=true
known_django='django'
profile='black'

[tool:pytest]
DJANGO_SETTINGS_MODULE = test.settings
python_files = tests.py test_*.py **_test.py
