[metadata]
name = baseapp_social_auth
version = 0.2.10
description = Authentication for facebook, linkedin and twitter
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    celery >= 5.2
    djangorestframework >= 3.14.0
    django-avatar >= 7.1.1
    django-model-utils >= 4.3.1
    hashids == 1.3.1
    requests >= 2.31.0
    rest-social-auth >= 8.1.0
    baseapp-backend >= 0.0.15
    social-auth-core == 4.5.4

[flake8]
exclude =
    build
    venv
ignore =
    E501
    W503

[tool:pytest]
DJANGO_SETTINGS_MODULE = testproject.settings
python_files = tests.py test_*.py **_test.py
