[metadata]
name = baseapp_url_shortening
version = 0.1.31
description = BaseApp URL Shortening
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    baseapp-core >= 0.3.4
    short_url == 1.2.2

[options.package_data]
baseapp_reactions =
    *.j2
    *.html
    *.png
