[metadata]
name = baseapp_wagtail
version = 1.0.0
description = Wagtail CMS for BaseApp
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    celery >= 5.2
    djangorestframework >= 3.14.0
    baseapp-core >= 0.2.2
    wagtail >= 6.2,<6.3
    wagtail-headless-preview == 0.8

[flake8]
exclude =
    build
    venv
ignore =
    E501
    W503

[options.package_data]
baseapp_core =
    *.j2
    *.html
    *.png

[tool:pytest]
python_files = tests.py test_*.py **_test.py
addopts = --ds=testproject.settings_for_tests
