[metadata]
name = baseapp-backend
version = 0.0.5
description = BaseApp
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.11
install_requires =
    baseapp-core >= 0.3.9

[options.package_data]
baseapp =
    *.j2
    *.html
    *.png
baseapp_reactions =
    *.j2
    *.html
    *.png
baseapp_reports =
    *.j2
    *.html
    *.png
