[metadata]
name = baseapp_core
version = 0.1.0
description = BaseApp Core
long_description = file: README.md
url = https://github.com/silverlogic/baseapp-backend
author = The SilverLogic
author_email = dev@tsl.io
license = BSD-3-Clause  # Example license

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django == 3.2.18
    celery == 5.2.7
    django-pgtrigger == 4.6.0
    swapper == 1.3.0
    django-model-utils == 4.3.1
    djangorestframework == 3.14.0
    djangorestframework-expander == 0.2.3
    drf-extra-fields == 3.4.1
    graphene == 3.2.1
    graphene-django == 3.0.0
    psycopg2 == 2.9.5

[options.package_data]
baseapp_core =
    *.j2
    *.html
    *.png
